[package]
name = "sarasara"
version = "0.2.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16"
clap = { version = "3.2", features = ["derive"] }
surf = { version = "2.3.2", default-features = false, features = [
  "h1-client-rustls",
  "middleware-logger",
  "encoding"
] }
rss = "2.0"
time = { version = "0.3", features = [ "formatting" ] }
